# Stoner-SCF

./: .gitignore  CMakeLists.txt  hamiltonian.cpp  hamiltonian.h  main.cpp  mpi_notes.md  params.in  params_io.cpp  params_io.h  plot_MCA_lam.py  plot_U.py  plot_bs.py  plot_pdos.py  scf.cpp  scf.h  seeds.h  single_bs.py  sweep.cpp  sweep.h  tests.cpp
notes/: kanamori_scf.md  mean_field.tex  model_summary.md
notes/condensed_note/: kanamori_note.tex
notes/documentation/: documentation.md
notes/latex_derivation/: mean_field.tex
notes/tb_neat/: tb_neat.tex
square_lattice/: slater_koster.py  t2g_overlap.py  tb_derivation.tex
